--- a/src/ui/dashboard/package.json
+++ b/src/ui/dashboard/package.json
@@ -22,6 +22,7 @@
     "vite-plugin-node-polyfills": "^0.24.0"
   },
   "dependencies": {
+    "hls.js": "^1.6.11",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
