Add YOLO fine-tuning, Re-ID API, TensorRT export pipeline, and geolocation tests
- Created sar_dataset.yaml for SAR-specific YOLO training configuration
- Added train_yolo.py script with comprehensive training pipeline
- Implemented Re-ID functionality in src/vision/reid.py with ResNet50 backbone
- Added Re-ID API endpoints to backend (register, match, list, delete targets)
- Created tools/export_trt.sh for ONNX and TensorRT model conversion
- Enhanced geolocation unit tests with telemetry simulation and accuracy validation
- Installed required dependencies: ultralytics and albumentations

--- a/.env.example
+++ b/.env.example
@@ -1,34 +1,128 @@
-# Environment Configuration Template
+# Foresight SAR System Environment Configuration
 # Copy this file to .env and fill in your actual values
+# NEVER commit .env to version control
 
-# API Keys and Tokens
+# =============================================================================
+# VAULT CONFIGURATION
+# =============================================================================
+
+# HashiCorp Vault server URL
+# VAULT_ADDR=http://localhost:8200
+
+# Vault authentication token (use vault auth methods in production)
+# VAULT_TOKEN=your_vault_token_here
+
+# Vault namespace (if using Vault Enterprise)
+# VAULT_NAMESPACE=your_namespace
+
+# =============================================================================
+# CRYPTOGRAPHIC KEYS
+# =============================================================================
+
+# Path to private key for evidence signing (fallback if Vault unavailable)
+# EVIDENCE_PRIVATE_KEY_PATH=/path/to/private/key.pem
+
+# Path to public key for evidence verification
+# EVIDENCE_PUBLIC_KEY_PATH=/path/to/public/key.pem
+
+# Key passphrase (if private key is encrypted)
+# KEY_PASSPHRASE=your_key_passphrase
+
+# =============================================================================
+# OPENTIMESTAMPS CONFIGURATION
+# =============================================================================
+
+# OpenTimestamps server URL (optional, defaults to public servers)
+# OTS_SERVER_URL=https://alice.btc.calendar.opentimestamps.org
+
+# Path to OTS CLI tool (optional, defaults to 'ots' in PATH)
+# OTS_CLI_PATH=/usr/local/bin/ots
+
+# =============================================================================
+# API KEYS AND TOKENS
+# =============================================================================
+
 # OPENAI_API_KEY=your_openai_api_key_here
 # DJI_API_KEY=your_dji_api_key_here
 # MAPBOX_ACCESS_TOKEN=your_mapbox_token_here
+# WEATHER_API_KEY=your_weather_api_key_here
 
-# Database Configuration
+# =============================================================================
+# DATABASE CONFIGURATION
+# =============================================================================
+
 # DATABASE_URL=postgresql://user:password@localhost:5432/foresight
 # POSTGRES_PASSWORD=your_secure_postgres_password
 # REDIS_URL=redis://localhost:6379
+# TEST_DATABASE_URL=postgresql://user:password@localhost:5432/foresight_test
 
-# Service Configuration
+# =============================================================================
+# CLOUD STORAGE CONFIGURATION
+# =============================================================================
+
+# AWS S3 configuration for evidence storage
+# AWS_ACCESS_KEY_ID=your_access_key
+# AWS_SECRET_ACCESS_KEY=your_secret_key
+# AWS_DEFAULT_REGION=us-west-2
+# S3_EVIDENCE_BUCKET=foresight-evidence
+
+# Azure Blob Storage (alternative to S3)
+# AZURE_STORAGE_ACCOUNT=your_storage_account
+# AZURE_STORAGE_KEY=your_storage_key
+# AZURE_CONTAINER_NAME=evidence
+
+# =============================================================================
+# SERVICE CONFIGURATION
+# =============================================================================
+
 # SAR_SERVICE_PORT=8004
 # DETECTION_CONFIDENCE_THRESHOLD=0.5
 # GEOLOCATION_PRECISION=high
+# MODEL_ENDPOINT=http://localhost:8080/predict
+# MODEL_API_KEY=your_model_api_key
 
-# Logging
+# =============================================================================
+# LOGGING AND MONITORING
+# =============================================================================
+
 # LOG_LEVEL=INFO
 # LOG_FILE_PATH=./out/logs/app.log
+# SENTRY_DSN=https://your_sentry_dsn@sentry.io/project_id
+# PROMETHEUS_PORT=9090
 
-# Security
+# =============================================================================
+# SECURITY CONFIGURATION
+# =============================================================================
+
 # JWT_SECRET=your_jwt_secret_here
 # ENCRYPTION_KEY=your_encryption_key_here
+# RATE_LIMIT_PER_MINUTE=60
+# CORS_ORIGINS=http://localhost:3000,http://localhost:8000
 
-# External Services
-# WEATHER_API_KEY=your_weather_api_key_here
+# =============================================================================
+# EXTERNAL SERVICES
+# =============================================================================
+
 # TERRAIN_SERVICE_URL=https://api.terrain-service.com
 
-# Development Settings
+# =============================================================================
+# DEVELOPMENT SETTINGS
+# =============================================================================
+
 # DEBUG=false
+# DEVELOPMENT=true
 # ENABLE_TELEMETRY=true
 # MOCK_DRONE_DATA=false
+
+# =============================================================================
+# RETRAINING CONFIGURATION
+# =============================================================================
+
+# Training data upload bucket
+# TRAINING_BUCKET=foresight-training-data
+
+# Active learning threshold
+# ACTIVE_LEARNING_CONFIDENCE_THRESHOLD=0.7
+
+# Maximum training samples per upload
+# MAX_TRAINING_SAMPLES=1000
