--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿
+
 # Additional computer vision and plotting
 # Core AI/ML Dependencies (frozen versions for stability)
 # Data processing
@@ -62,3 +62,14 @@ tqdm==4.67.1
 ultralytics==8.3.192
 uvicorn==0.35.0
 websockets==15.0.1
+
+# SAR Training Pipeline Additional Dependencies
+albumentations>=1.3.0
+wandb>=0.13.0
+tensorboard>=2.10.0
+seaborn>=0.11.0
+pandas>=1.5.0
+faiss-cpu>=1.7.0
+timm>=0.6.0
+onnx-simplifier>=0.4.0
+isort>=5.10.0
