--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Foresight SAR System Environment Configuration
+# ARGUS SAR System Environment Configuration
 # Copy this file to .env and fill in your actual values
 # NEVER commit .env to version control
 
@@ -51,10 +51,10 @@
 # DATABASE CONFIGURATION
 # =============================================================================
 
-# DATABASE_URL=postgresql://user:password@localhost:5432/foresight
+# DATABASE_URL=postgresql://user:password@localhost:5432/argus
 # POSTGRES_PASSWORD=your_secure_postgres_password
 # REDIS_URL=redis://localhost:6379
-# TEST_DATABASE_URL=postgresql://user:password@localhost:5432/foresight_test
+# TEST_DATABASE_URL=postgresql://user:password@localhost:5432/argus_test
 
 # =============================================================================
 # CLOUD STORAGE CONFIGURATION
@@ -64,7 +64,7 @@
 # AWS_ACCESS_KEY_ID=your_access_key
 # AWS_SECRET_ACCESS_KEY=your_secret_key
 # AWS_DEFAULT_REGION=us-west-2
-# S3_EVIDENCE_BUCKET=foresight-evidence
+# S3_EVIDENCE_BUCKET=argus-evidence
 
 # Azure Blob Storage (alternative to S3)
 # AZURE_STORAGE_ACCOUNT=your_storage_account
@@ -119,7 +119,7 @@
 # =============================================================================
 
 # Training data upload bucket
-# TRAINING_BUCKET=foresight-training-data
+# TRAINING_BUCKET=argus-training-data
 
 # Active learning threshold
 # ACTIVE_LEARNING_CONFIDENCE_THRESHOLD=0.7
