--- a/requirements-jetson.txt
+++ b/requirements-jetson.txt
@@ -4,8 +4,8 @@
 
 # Core AI/ML Dependencies (Jetson-optimized versions)
 # Note: Install PyTorch from NVIDIA's wheel for Jetson
-# torch==2.1.0+nv23.05  # Install via: pip install torch torchvision --index-url https://download.pytorch.org/whl/cu118
-# torchvision==0.16.0+nv23.05
+torch==2.1.0+nv23.05  # Install via: pip install torch torchvision --index-url https://download.pytorch.org/whl/cu118
+torchvision==0.16.0+nv23.05
 
 # Computer Vision (use Jetson-optimized OpenCV)
 opencv-python==4.9.0.80  # Or use pre-built OpenCV with CUDA support
@@ -44,7 +44,7 @@ jetson-stats==4.2.7  # System monitoring for Jetson devices
 pycuda==2023.1      # CUDA Python bindings
 
 # TensorRT Python API (usually pre-installed with JetPack)
-# tensorrt>=8.6.0,<9.0.0  # Uncomment if not available via JetPack
+# tensorrt==8.6.1  # Uncomment if not available via JetPack
 
 # Performance Optimization
 psutil==5.9.6        # System resource monitoring
